# Conf

./: .gitmodules  CMakeLists.txt  Configator.hpp  LICENCE  Makefile  README.md  SimpleIniReader.hpp  THIRD.md  a.out  configator.hpp  main.cpp  test.1.ini  test.cpp  test.ini  test1.ini  test2.ini  test3.ini  test4.ini
docs/: examples.md
example/: CMakeLists.txt  dump.cpp  example.conf  loadData.cpp  loadFile.cpp  loadStream.cpp  loadString.cpp  quickstart.conf  quickstart.cpp
include/: configator.hpp
include/blet/: conf.h
include/mblet/: configator.hpp
single_include/: CMakeLists.txt  amalgamate_config.json
single_include/blet/: conf.h
single_include/test/: already_include.cpp  already_include.h  main.cpp
src/: conf.cpp  configator.cpp  configator_exception.cpp  configator_map.cpp  configator_map_exception.cpp  dump.cpp  exception.cpp  load.cpp  main.cpp
test/: CMakeLists.txt  Makefile  constructor.cpp  dump.cpp  example.cpp  examples.cpp  exception.cpp  getFilename.cpp  getValue.cpp  isRead.cpp  loadData.cpp  loadFile.cpp  loadString.cpp  parse.cpp  readFile.cpp  setConfig.cpp  test.cpp  test3.ini  test4.ini  test5.ini
test/include/: fileGuard.hpp
test/include/mock/: fileGuard.h
